--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		.div2{background: green;}
 	</style>
 </head>
-<body>
+<body style="padding-top:50px;">
 	
 	<div class="container">
 		
@@ -644,6 +644,129 @@
 			<div id="html2" class="tab-pane fade">
 				<h4>Html</h4>
 			</div>
+		</div>
+	</div>
+
+	<h2 class="text-center text-primary">导航栏</h2>
+	<div class="container">
+		<div class="panel panel-primary">
+			<div class="panel-heading">
+				<div class="panel-title">导航栏</div>
+			</div>
+			<div class="panel-body">
+				<p>向nav标签添加class.navbar, .navbar-default</p>
+				<p>向上面的元素添加role="navigation"，有助于可访问性</p>
+				<p>向div元素添加一个标题class.navbar-header, 内部含有带class.navbar-brand的a元素。这会让文本看起来更大一号</p>
+				<p>为了向导航栏添加链接， 只需要简单地添加带有class.nav, .navbar-nav的无序列表</p>
+			</div>
+		</div>
+
+		<nav class="navbar navbar-default">
+			<div class="navbar-header">
+				<a href="#" class="navbar-brand">Bootstrap</a>
+			</div>
+			<div>
+				<ul class="nav navbar-nav">
+					<li><a href="#">ios</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">web<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">HTML</a></li>
+							<li><a href="#">CSS</a></li>
+							<li class="divider"></li>
+							<li><a href="#">javaScript</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
+		<h3>响应式</h3>
+		<nav class="navbar navbar-default">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example0-navbar-collapse">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a href="#" class="navbar-brand">Bootstrap</a>
+			</div>
+			<div class="collapse navbar-collapse" id="example0-navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#">ios</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">web<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">HTML</a></li>
+							<li><a href="#">CSS</a></li>
+							<li class="divider"></li>
+							<li><a href="#">javaScript</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
+		<h3>导航栏中的表单</h3>
+		<nav class="navbar navbar-default">
+			<div class="navbar-header">
+				<a href="#" class="navbar-brand">Bootstrap</a>
+			</div>
+			<div>
+				<form action="" class="navbar-form navbar-left">
+					<div class="form-group">
+						<input type="text" class="form-control" placeholder="search">
+					</div>
+					<button class="btn btn-default">提交</button>
+				</form>
+			</div>
+		</nav>
+
+		<h3>导航栏中的按钮</h3>
+		<p>使用class.navbar-btn在a和input元素上可以添加垂直按钮</p>
+		<p class="text-danger">不要再class.navbar-nav内的a标签上使用.navbar-btn</p>
+		<nav class="navbar navbar-default">
+			<div class="navbar-header">
+				<a href="#" class="navbar-brand">Bootstrap</a>
+			</div>
+			<div>
+				<form action="" class="navbar-form navbar-left">
+					<div class="form-group">
+						<input type="text" class="form-control" placeholder="Search">
+					</div>
+					<button class="btn btn-default">提交</button>
+				</form>
+				<button type="button" class="btn btn-default navbar-btn">导航栏按钮</button>
+			</div>
+		</nav>
+
+		<h3>导航栏中的文本</h3>
+		<p>通过class.nav-text这通常与p标签一起使用</p>
+		<p>使用class.navbar-fixed-top可以把导航栏固定到顶部</p>
+		<p>使用class.navbar-fixed-bottom 可以把导航栏固定到底部</p>
+		<p>使用class.navbar-static-top 可以静态到顶部</p>
+
+		<h3>结合图标的导航栏</h3>
+		<nav class="navbar navbar-default navbar-static-top">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<a href="#" class="navbar-brand">Bootstrap</a>
+				</div>
+				<div class="nav navbar-nav navbar-right">
+					<li><a href="#"><span class="glyphicon glyphicon-user"></span> 注册</a></li>
+					<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> 登录</a></li>
+				</div>
+			</div>
+		</nav>
+	</div>
+
+
+	<h2 class="text-center text-success">面包屑导航</h2>
+	<div class="container">
+		<div class="breadcrumb">
+			<li><a href="#">Home</a></li>
+			<li><a href="#">2016</a></li>
+			<li class="active">十二月</li>
 		</div>
 	</div>
 	<br>
